Add mapUsingPython as pipeline extension [CTT-830] (#5934)
Adds a more convenient way of invoking `mapUsingPython` using the new
extension API. This will also serve as an example how to implement
custom extension.

---------

Co-authored-by: Tomasz Gawęda <tomasz.gaweda@outlook.com>
GitOrigin-RevId: 5ab3aba098a32915a1ded9d1ca00f6447dfecc0e